# genetic-janitor

./: .gitignore  README.md  notes.txt
backend/c++/genetic-janitor/: CMakeLists.txt  game.cpp  game.h  genetic.cpp  genetic.h  genetic_janitor  main.cpp  randomUtil.cpp  randomUtil.h
src/: index.html
